--- a/Apple Website Clone/index.html
+++ b/Apple Website Clone/index.html
@@ -222,13 +222,16 @@
           </ul>
           <p></p>
         </div>
-        More ways to shop: Find an Apple Store or other retailer near you. Or
-        call 000800 040 1966.
+        <p class="bottom-shop">
+          More ways to shop: Find an Apple Store or other retailer near you. Or
+          call 000800 040 1966.
+        </p>
         <hr />
         <div class="footer">
           <p>
-            Copyright © 2023 Apple Inc. All rights reserved. Privacy Policy
-            Terms of Use Sales Policy Legal Site Map Owner Parth Darji
+            Copyright © 2023 Apple Inc. All rights reserved. Privacy Policy |
+            Terms of Use | Sales Policy | Legal Site Map |
+            <b>Owner Parth Darji</b>
           </p>
         </div>
       </div>
